Правки по критериям

--- a/catalog.html
+++ b/catalog.html
@@ -82,9 +82,9 @@
               </a>
             </li>
             <li class="catalog-breadcrumbs-item">
-              <a class="catalog-breadcrumbs-link" aria-current="page" href="catalog.html">
+              <span class="catalog-breadcrumbs-link">
                 Гостиницы
-              </a>
+              </span>
             </li>
           </ul>
 
@@ -193,19 +193,19 @@
 
               <ul class="view-type-list" aria-label="Способ отображения каталога">
                 <li class="view-type-item">
-                  <button class="catalog-view-mode-button grid-mode catalog-view-mode-button-current" type="button">
+                  <a class="button catalog-view-mode-button grid-mode catalog-view-mode-button-current" href="catalog.html?view=tile">
                     <span class="visually-hidden">В виде сетки</span>
-                  </button>
+                  </a>
                 </li>
                 <li class="view-type-item">
-                  <button class="catalog-view-mode-button slide-show-mode " type="button">
+                  <a class="button catalog-view-mode-button slide-show-mode" href="catalog.html?view=card">
                     <span class="visually-hidden">В виде слайдшоу</span>
-                  </button>
+                  </a>
                 </li>
                 <li class="view-type-item">
-                  <button class="catalog-view-mode-button list-mode" type="button">
+                  <a class="button catalog-view-mode-button list-mode" href="catalog.html?view=list">
                     <span class="visually-hidden">В виде списка</span>
-                  </button>
+                  </a>
                 </li>
               </ul>
             </div>
