--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-active" href="catalog.html" aria-current="page">
+              <a class="navigation-link navigation-link-active" aria-current="page">
                 Гостиницы
               </a>
             </li>
@@ -82,9 +82,9 @@
               </a>
             </li>
             <li class="catalog-breadcrumbs-item">
-              <span class="catalog-breadcrumbs-link">
+              <a class="catalog-breadcrumbs-link" aria-current="page">
                 Гостиницы
-              </span>
+              </a>
             </li>
           </ul>
 
