--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   </head>
   <body>
     <header class="main-header" data-test="header">
@@ -221,13 +219,13 @@
             <div class="stay-dates">
               <label class="modal-label" for="arrival-date">Дата заезда:</label>
               <div class="modal-input-wrapper">
-                <input class="modal-input" name="arrival-date" id="arrival-date" value="27 апреля 2020" placeholder="Укажите дату">
+                <input class="modal-input" name="arrival-date" id="arrival-date" value="27 апреля 2020" placeholder="Укажите дату" required>
                 <p class="input-description input-error">Мы не можем отправить вас в прошлое.</p>
               </div>
 
               <label class="modal-label" for="departure-date">Дата выезда:</label>
               <div class="modal-input-wrapper">
-                <input class="modal-input" name="departure-date" id="departure-date" value="1 сентября 2023" placeholder="Укажите дату">
+                <input class="modal-input" name="departure-date" id="departure-date" value="1 сентября 2023" placeholder="Укажите дату" required>
                 <p class="input-description">На эти даты есть свободные номера. Пока есть.</p>
               </div>
             </div>
@@ -243,7 +241,7 @@
                     <span class="visually-hidden">Уменьшить количество</span>
                   </button>
 
-                  <input class="modal-input" name="adults" type="number" id="adults" value="2">
+                  <input class="modal-input" name="adults" type="number" id="adults" value="2" required>
 
                   <button class="button count-input-button" type="button">
                     <svg class="count-input-button-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
@@ -277,7 +275,7 @@
                     <span class="visually-hidden">Уменьшить количество</span>
                   </button>
 
-                  <input class="modal-input" name="children" type="number" id="children" value="2">
+                  <input class="modal-input" name="children" type="number" id="children" value="2" required>
 
                   <button class="button count-input-button" type="button">
                     <svg class="count-input-button-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
